samples/_failures_safe/1761215022_91abb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f73a319f.c: In function ‘main’:
./samples/SAFE/__tmp_f73a319f.c:194:34: error: expected ‘)’ at end of input
  194 |     if (len > 0 && input[len - 1]
      |        ~                         ^
      |                                  )
./samples/SAFE/__tmp_f73a319f.c:194:5: error: expected declaration or statement at end of input
  194 |     if (len > 0 && input[len - 1]
      |     ^~
